version/2.0/_sources/api/ansys/scade/guitools/control/FileSelector.rst.txt






:class:`FileSelector`
=====================

.. py:class:: ansys.scade.guitools.control.FileSelector(owner, text: str, extension: str, directory: str, filter: str, mode: FSM, wl: int, x: int, y: int, w: int, h: int = c.EDIT_HEIGHT, reference: str = '', **kwargs)

   Bases: :py:obj:`StaticEdit`


   
   Defines a bundle made of a static, an edit, and a button control.


   :Parameters:

       **owner** : :obj:`Any`
           owner of the control

       **text** : :class:`python:str`
           Text of the static control.

       **extension** : :class:`python:str`
           Default extension of the files.

       **directory** : :class:`python:str`
           Initial directory of the file selector dialog box, or the current directory when empty.

       **filter** : :class:`python:str`
           Description of the format of the visible files in the file selector dialog box.

       **mode** : :obj:`FSM`
           Mode of the file seclector dialog box, either ``FSM.LOAD`` or ``FSM.SAVE``.

       **wl** : :class:`python:int`
           Width of the static control.

       **x** : :class:`python:int`
           Horizontal position of the control.

       **y** : :class:`python:int`
           Vertical position of the control.

       **w** : :class:`python:int`
           Width of the control.

       **h** : :class:`python:int`
           Height of the control, default csts.EDIT_HEIGHT.

       **reference** : :class:`python:str`
           Reference directory to resolve or compute a relative path when not empty.

       **kwargs** : :obj:`Any`
           Other parameters of ``scade.tool.suite.gui.widgets.EditBox``.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: FileSelector

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~on_click`
            - Call the Windows standard open or save selection commands.
          * - :py:attr:`~on_layout`
            - Declare the constraints with respect to the owner.
          * - :py:attr:`~set_visible`
            - Show or hide the control.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~btn_dots`
            - 
          * - :py:attr:`~directory`
            - 
          * - :py:attr:`~extension`
            - 
          * - :py:attr:`~filter`
            - 
          * - :py:attr:`~mode`
            - 
          * - :py:attr:`~owner`
            - 
          * - :py:attr:`~reference`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.scade.guitools.control import FileSelector


Attribute detail
----------------

.. py:attribute:: btn_dots

.. py:attribute:: directory

.. py:attribute:: extension

.. py:attribute:: filter

.. py:attribute:: mode

.. py:attribute:: owner

.. py:attribute:: reference



Method detail
-------------

.. py:method:: on_click(button: scade.tool.suite.gui.widgets.Button)

   
   Call the Windows standard open or save selection commands.
















   ..
       !! processed by numpydoc !!

.. py:method:: on_layout()

   
   Declare the constraints with respect to the owner.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_visible(show: bool)

   
   Show or hide the control.
















   ..
       !! processed by numpydoc !!




